--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,10 @@ gitdb==4.0.12
 GitPython==3.1.44
 glcontext==2.5.0
 googleapis-common-protos==1.70.0
+# googletrans==4.0.0rc1  <-- REMOVED
+# Optional replacement:
+# deep-translator==1.11.4
+
 h11==0.9.0
 h2==3.2.0
 hpack==3.0.0
@@ -50,7 +54,7 @@ htbuilder==0.9.0
 html5lib==1.1
 httpcore==0.9.1
 httplib2==0.22.0
-httpx==0.13.3
+# httpx==0.13.3  <-- REMOVED
 hyperframe==5.2.0
 idna==2.10
 importlib_metadata==8.5.0
@@ -117,7 +121,7 @@ referencing==0.35.1
 requests==2.31.0
 requests-toolbelt==0.10.1
 rfc3986==1.5.0
-rich==13.9.4
+rich==14.0.0
 rpds-py==0.20.1
 rsa==4.9.1
 scikit-learn==1.3.2
@@ -149,7 +153,7 @@ threadpoolctl==3.4.0
 toml==0.10.2
 tornado==6.4.2
 tqdm==4.66.2
-typing_extensions==4.12.2
+typing-extensions==4.13.2
 tzdata==2024.1
 urllib3==1.26.20
 validators==0.34.0
